Add new CSS in show view for bikes

--- a/app/assets/stylesheets/components/_logos.scss
+++ b/app/assets/stylesheets/components/_logos.scss
@@ -1,9 +1,14 @@
 .show-bikes-logo {
   font-size: 35px;
-  color: grey;
+  color: $dark-grey;
   padding: 8px 15px 0 0;
 }
 
-.plug-logo, .plus-logo {
-  font-size: 30px;
+.plug-logo{
+  font-size: 28px;
+}
+
+.plus-logo{
+  font-size: 16px;
+  color: $light-grey;
 }
