--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -21,7 +21,12 @@
 
 /* Navbar logo */
 .navbar-wagon-brand img {
-  width: 50px;
+  width: 84px;
+  margin-left: 35px;
+  color: #ccc;
+  border-left: solid 1px;
+  border-right: solid 1px;
+  border-radius: 2px;
 }
 
 /* Navbar right section (with form, links, button) */
