add facebook avatar dans profil

--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -9,6 +9,12 @@
   width: 50px;
   border-radius: 50%;
 }
+
+.avatar-monster {
+  width: 150px;
+  border-radius: 50%;
+}
+
 .avatar-bordered {
   width: 30px;
   border-radius: 50%;
