work in progress

--- a/app/assets/stylesheets/pages/_bikes.scss
+++ b/app/assets/stylesheets/pages/_bikes.scss
@@ -7,6 +7,10 @@
   flex: 0 0 50%;
 }
 
+.bikes-map {
+  margin-top:20px;
+}
+
 .bike-title {
   padding-top: 40px;
 }
@@ -68,3 +72,4 @@
   font-family: 'Raleway';
   font-size: 40px;
 }
+
