--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="form-actions">
-          <%= f.button :submit, "Editer votre profil", class: "btn btn-success" %>
+          <%= f.button :submit, "Editer votre profil", class: "btn btn-profil" %>
         </div>
       <% end %>
     </div>
