--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,20 +1,28 @@
-<div class="container">
-  <div class="row">
-    <h2 class="text-center"> <strong><%= @user.first_name %></strong> <strong><%= @user.last_name %></strong> <%= link_to "edit your profile", edit_profile_path, class: "btn btn-info"%> </h2>
-    <div class="col-md-6 col-md-offset-5 padded">
-    <% if @user.photo? %>
-      <%= cl_image_tag @user.photo.path, width: 200, height: 200, crop: :fill, class: "img-circle" %>
-    <% end %>
-    </div>
-  </div>
-  <div class="row">
-      <div class="col-md-8 col-md-offset-5 ">
-        <h3><strong> téléphone : <%= @user.phone_number %> </strong> </h3>
-         <h3><strong> email : <%= @user.email %> </strong> </h3>
+
+<div class="wrapper">
+  <div class="pad">
+    <div class="content_center">
+      <h2 class="text-center">  <%= link_to "Retour" , "/" , class: "btn btn-success"%> <strong><%= @user.first_name %></strong> <strong><%= @user.last_name %></strong> </h2>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+        <% if @user.photo? %>
+          <%= cl_image_tag @user.photo.path, width: 200, height: 200, crop: :fill, class: "img-circle" %>
+        <% end %>
+        </div>
+      </div>
+      <div class="row">
+         <ul class="list-inline padded">
+          <li><strong> téléphone : </strong> <%= @user.phone_number %> </h5></li>
+          <li><strong> email : </strong> <%= @user.email %></li>
+        </ul>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+        <%= link_to "Modifier", edit_profile_path, class: "btn btn-profil"%>
+        </div>
       </div>
     </div>
-    <hr>
-  </div>
+</div>
 
 
 
