--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -16,11 +16,11 @@
 
           <!-- Profile picture and dropdown -->
       <div class="navbar-wagon-item">
-        <div class="dropdown">
+        <div class="dropdown d">
           <% if current_user.photo? %>
-            <%= cl_image_tag current_user.photo.path , class: "avatar-large" %>
+            <%= cl_image_tag current_user.photo.path , class: "avatar-large dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <% else %>
-           <%= facebook_avatar %>
+           <%= facebook_avatar%>
           <% end %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
