--- a/app/views/owner/bikes/index.html.erb
+++ b/app/views/owner/bikes/index.html.erb
@@ -1,8 +1,10 @@
+<div class="container">
   <div class="row">
-    <div class="col-md-6 col-md-offset-5">
+    <div class="col-md-4 col-md-offset-4">
       <h1> Gerer mes offres </h1>
+      <hr>
     </div>
-      <% @bikes.each do |bike|%>
+       <% @bikes.each do |bike|%>
         <div class="col-xs-12 col-md-6">
           <% if bike.photos? %>
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path bike.photos.first.path %>);">
@@ -10,7 +12,11 @@
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url("");">
           <% end %>
           <div class="card-city">
-            <%= bike.city %>
+            <% if bike.available == true %>
+            <strong>En location</strong>
+          <% else %>
+            <strong>En attente</strong>
+          <% end %>
           </div>
           <% if bike.user.photo %>
             <%= cl_image_tag bike.user.photo.path, crop: :fill, class: "card-avatar" %>
@@ -21,20 +27,20 @@
           </div>
           <%= link_to "", bike_path(bike), class: "card-link"%>
           </div>
-          <ul class="product-controls">
-            <div class="product-controls-refuse">
-              <%= link_to not_available_owner_bike_path(bike), method: :patch, id: "location_false" do %>
-                <i class="fa fa-times" aria-hidden="true"> Enlever de la location </i>
+          <ul class="controls">
+            <div class="product-controls-refuse controls-item">
+              <%= link_to not_available_owner_bike_path(bike), method: :patch, id: "location_false",class: "btn btn-danger" do %>
+                <i class="fa fa-times" aria-hidden="true">Retirer de la location </i>
             <% end %>
             </div>
 
-            <div class="product-controls-accept">
-              <%= link_to available_owner_bike_path(bike), method: :patch, id: "location_good" do %>
-                <i class="fa fa-check" aria-hidden="true"> Mettre en location </i>
+            <div class="product-controls-accept controls-item">
+              <%= link_to available_owner_bike_path(bike), method: :patch, id: "location_good", class: "btn btn-success" do %>
+                <i class="fa fa-check" aria-hidden="true">Mettre en location </i>
               <% end %>
             </div>
-          </ul>
           </div>
+          </ul>
       <%end%>
   </div>
 </div>
