--- a/app/assets/stylesheets/requests/index.scss
+++ b/app/assets/stylesheets/requests/index.scss
@@ -6,30 +6,137 @@
   display:flex;
   justify-content:space-between;
   align-items: center;
-  background-color: #edeff0;
-}
-
-.flex-item {
-  padding:30px;
-  margin-left: 80px;
-  margin-right: 80px;
-
-}
-
-.flex-item2 {
-  padding:20px;
+  padding: 30px 0 30px 0;
 }
 
 .profile-locataire {
-  border: 1px solid rgb(230,230,230);
   background-color:white;
-  font-size: 18px;
-  font-family: 'Open Sans';
-  display:flex;
-  align-items: center;
-  height: 175px;
+  flex: 0 0 40%;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px #e7e7e7;
+  font-weight: normal;
+  font-size: 16px;
+  position: relative;
+  height: 245px;
+  margin-right: 10px;
 }
 
-.profile-locataire img {
-  padding:5px;
+
+.request-title-pink h3 {
+  background-color: $pink;
+  color: white;
+  font-size: 16px;
+  position:absolute;
+  top:-22px;
+  width: 100%;
+  padding: 5px 0 5px 0;
+}
+
+.request-title-green h3 {
+  background-color: $green;
+  color: white;
+  font-size: 16px;
+  position:absolute;
+  top:-22px;
+  width: 100%;
+  padding: 5px 0 5px 0;
+}
+
+
+.request-user-avatar{
+  position: absolute;
+  top: 45px;
+  left: 20px;
+}
+
+.request-user-name{
+  position: absolute;
+  left: 20px;
+  bottom: 45px;
+  font-family: 'Open Sans';
+  font-size:14px;
+  color: $light-grey;
+}
+
+.request-user-phone{
+  position: absolute;
+  left: 20px;
+  bottom: 25px;
+  font-family: 'Open Sans';
+  font-size:14px;
+  color: $light-grey;
+}
+
+.calendar-request{
+  position: absolute;
+  right: 58px;
+  top: 70px;
+  font-size: 30px;
+  color: $light-grey;
+}
+
+.request-date-card{
+  position: absolute;
+  right: 20px;
+  top: 105px;
+  font-family: 'Open Sans';
+  font-size:14px;
+  color: $light-grey;
+}
+
+.card-img-request{
+  flex: 0 0 40%;
+  border-radius: 4px;
+  box-shadow: 1px 1px 2px #e7e7e7;
+  font-weight: normal;
+  font-size: 16px;
+  position: relative;
+  height: 245px;
+  background-size: cover;
+}
+
+
+// .card-img-request{
+//   position: absolute;
+//   bottom: 0;
+//   width: 100%;
+//   height: 100%;
+// }
+
+.card-city-request{
+  position: absolute;
+  color: white;
+  top: 30px;
+  left: 20px;
+}
+
+.card-title-request{
+  position: absolute;
+  color: white;
+  top:122px;
+  left: 20px;
+}
+
+.request-content-right{
+  flex: 0 0 20%;
+  position: relative;
+  height: 245px;
+}
+
+.logo-check-request{
+  position:absolute;
+  left: 25px;
+  top: 112px;
+}
+
+.logo-times-request{
+  position:absolute;
+  left: 85px;
+  top: 112px;
+}
+
+.accept, .refuse{
+  position: absolute;
+  left: 55px;
+  top: 112px;
 }
