form designed + home +card

--- a/app/assets/stylesheets/components/_users_form.scss
+++ b/app/assets/stylesheets/components/_users_form.scss
@@ -7,3 +7,25 @@
   text-align: center;
   margin-bottom: 40px;
 }
+
+
+.wrapper_for_user_form{
+  background-color: $background-grey;
+}
+
+
+.wrapper_for_user_form h1{
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+
+.wrapper_for_user_form h2{
+  margin-top: 10px;
+  padding: 10px;
+}
+
+
+.post-form-inline{
+  padding-top: 15px;
+}
