--- a/app/views/owner/bikes/index.html.erb
+++ b/app/views/owner/bikes/index.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
       <% @bikes.each do |bike|%>
         <div class="col-xs-12 col-sm-6">
-          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('http://lorempicsum.com/futurama/450/200/1');">
+          <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path bike.photos.first.path %>);">
             <div class="card-city"><%= bike.city %></div>
             <div class="card-description">
             <h2><%= bike.title %></h2>
