--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,35 +1,64 @@
-<div class="container text-center">
-  <div class= "bike-img">
-
+<% if @bike.photos? == true %>
+  <div class= "wrapper-bike-img" style="background-image:linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0)), url(<%= cl_image_path @bike.photos.first.path %>);"></div>
+<% else %>
+  <div class= "wrapper-bike-img" style="background-color:#ccc;">
   </div>
-  <%= image_tag("http://lorempicsum.com/futurama/450/200/1") %>
+<% end %>
 
-  <h2 class="bike-title"><%= @bike.title %></h2><hr>
-  <img class="card-user avatar" src="user.jpg">
-  <div>
-    <h3>A propos de ce vélo :</h3>
-    <% if @bike.electric == true %>
-      <i class="fa fa-bicycle show-bikes-logo bike-logo" aria-hidden="true"></i>
-      <i class="fa fa-plus show-bikes-logo plus-logo" aria-hidden="true"></i>
-      <i class="fa fa-plug show-bikes-logo plug-logo" aria-hidden="true"></i>
-    <% else %>
-      <i class="fa fa-bicycle show-bikes-logo" aria-hidden="true"></i>
-    <% end %>
-    <div class="bike-detail">
-      <%= @bike.detail %>
+<div class="container container-show-bike-head text-center">
+  <div class="row">
+    <div class="col-md-offset-2 col-md-8 col-md-offset-2">
+      <h2 class="text-center"><%= @bike.title %></h2>
+      <div class="show-bike-city">
+        <%= @bike.city %>
+      </div>
+      <div class="show-bike-avatar">
+      <% if @bike.user.photo? %>
+        <%= cl_image_tag @bike.user.photo.path %>
+      <% end %>
+      </div>
+
+      <div class="show-bike-username">
+        <%= @bike.user.first_name %>
+        <%= @bike.user.last_name %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container container-show-bike-content text-center">
+  <div class="row">
+    <div class="col-md-offset-2 col-md-8 col-md-offset-2">
+      <hr>
+      <div class="show-bike-logos">
+        <% if @bike.electric == true %>
+          <i class="fa fa-bicycle show-bikes-logo bike-logo" aria-hidden="true"></i>
+          <i class="fa fa-plus show-bikes-logo plus-logo" aria-hidden="true"></i>
+          <i class="fa fa-plug show-bikes-logo plug-logo" aria-hidden="true"></i>
+        <% else %>
+          <i class="fa fa-bicycle show-bikes-logo" aria-hidden="true"></i>
+        <% end %>
+        <hr>
+      </div>
     </div>
   </div>
 
-
-  <hr>
-  <%= link_to "Retour", bookings_path, class: "btn btn-success btn-large " %>
-  <% if @booking.status == "waiting" %>
-    <%= link_to "Annuler votre demande", cancel_booking_path(@booking), method: :delete, class: "btn btn-danger btn-large" %>
-  <% elsif @booking.status == "accepte" %>
-    <strong> <p> Contacter  <%= @bike.user.first_name %> au : <%= @bike.user.phone_number %> <p> </strong>
-  <% else %>
-    <p> Votre demande n'a pas été acceptée </p>
-  <% end %>
+  <div class="row">
+      <div class="col-md-offset-3 col-md-6 col-md-offset-3">
+        <div class="show-bike-detail text-center">
+          <h3>A propos de ce vélo :</h3>
+          <%= @bike.detail %>
+        </div>
+        <hr>
+          <%= link_to "Retour", bookings_path, class: "btn btn-success btn-large " %>
+          <% if @booking.status == "waiting" %>
+          <%= link_to "Annuler votre demande", cancel_booking_path(@booking), method: :delete, class: "btn btn-danger btn-large" %>
+          <% elsif @booking.status == "accepte" %>
+          <strong> <p> Contacter  <%= @bike.user.first_name %> au : <%= @bike.user.phone_number %> </p> </strong>
+          <% else %>
+          <p> Votre demande n'a pas été acceptée </p>
+          <% end %>
+          </div>
+  </div>
 
 
 
