--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,8 @@
 <div class="wrapper">
   <div class="pad">
     <div class="content_center">
-      <h2 class="text-center">  <%= link_to "Retour" , "/" , class: "btn btn-success"%> <strong><%= @user.first_name %></strong> <strong><%= @user.last_name %></strong> </h2>
-      <div class="row">
+      <h2 class="text-center"> <strong><%= @user.first_name %></strong> <strong><%= @user.last_name %></strong> </h2>
+      <div class="row text-center">
         <div class="col-md-6 col-md-offset-3">
         <% if current_user.photo? %>
           <%= cl_image_tag current_user.photo.path , width: 150, height: 150 , class: "avatar-monster" %>
@@ -11,13 +11,13 @@
         <% end %>
         </div>
       </div>
-      <div class="row">
+      <div class="row text-center">
          <ul class="list-inline padded">
           <li><strong> téléphone : </strong> <%= @user.phone_number %> </h5></li>
           <li><strong> email : </strong> <%= @user.email %></li>
         </ul>
       </div>
-      <div class="row">
+      <div class="row text-center">
         <div class="col-md-4 col-md-offset-4">
         <%= link_to "Modifier", edit_profile_path, class: "btn btn-profil"%>
         </div>
